--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Rex Berry</title>
-</head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RexBerry GitHub Page</title>
 
+    <link rel="stylesheet" href="https://use.typekit.net/kvk1ivi.css">
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+</head>
 <body>
-  <p>Rex Berry's GitHub page</p>
+    <h1>RexBerry GitHub Page</h1>
+    <p>Welcome to my GitHub page! I hope you find what you’re looking for.</p>
+
+    <h2>School Projects</h2>
+    <p class="italic">Pages made for school projects</p>
+    <ul>
+        <li><a href="./ap-psych/passion-project/timing-test/index.html">Timing Test</a></li>
+    </ul>
+    
+    <h2>Miscellaneous</h2>
+    <p class="italic">Miscellaneous pages of varying quality</p>
+    <ul>
+        <li><a href="./misc/timing-test-updated/index.html">Timing Test (updated)</a></li>
+        <li><a href="./misc/inflation-simulator/index.html">Inflation Simulator</a></li>
+        <li><a href="./misc/true-education/index.html">A True Education</a></li>
+    </ul>
+    
+    <span id="footer">Created by Rex Berry · Source on <a href="https://github.com/RexBerry/RexBerry.github.io">GitHub</a></span>
+
 </body>
 </html>
