--- a/misc/inflation-simulator/index.html
+++ b/misc/inflation-simulator/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Pro|Fira+Code">
     <style>
         html, body {
-            background: #ddd;
+            background: #f0f0f0;
             font-size: calc(max(10em, 50vw) / 24);
             margin-top: 1rem;
         }
