--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RexBerry GitHub Page</title>
 
-    <link rel="stylesheet" href="https://use.typekit.net/kvk1ivi.css">
     <link rel="stylesheet" href="style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -26,15 +25,16 @@
     <ul>
         <li><a href="./ap-psych/passion-project/timing-test/index.html">Timing Test</a></li>
     </ul>
-    
+
     <h2>Miscellaneous</h2>
     <p class="italic">Miscellaneous pages of varying quality</p>
     <ul>
+        <li><a href="./misc/pi-spiral/index.html">Pi Spiral</a></li>
         <li><a href="./misc/timing-test-updated/index.html">Timing Test (updated)</a></li>
         <li><a href="./misc/inflation-simulator/index.html">Inflation Simulator</a></li>
         <li><a href="./misc/true-education/index.html">A True Education</a></li>
     </ul>
-    
+
     <span id="footer">Created by Rex Berry · Source on <a href="https://github.com/RexBerry/RexBerry.github.io">GitHub</a></span>
 
 </body>
