--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p class="italic">Miscellaneous pages of varying quality</p>
     <ul>
         <li><a href="./misc/pi-spiral/index.html">Pi Spiral</a></li>
+        <li><a href="./misc/gamma-test/index.html">Gamma Test</a></li>
         <li><a href="./misc/timing-test-updated/index.html">Timing Test (updated)</a></li>
         <li><a href="./misc/inflation-simulator/index.html">Inflation Simulator</a></li>
         <li><a href="./misc/true-education/index.html">A True Education</a></li>
