--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RexBerry GitHub Page</title>
+    <title>Rex Berry GitHub Page</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/kvk1ivi.css">
+    <link rel="stylesheet" href="/style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -14,29 +15,30 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#f0f0f0">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <h1>RexBerry GitHub Page</h1>
-    <p>Welcome to my GitHub page! I hope you find what you’re looking for.</p>
+    <div id="main">
+        <h1>Rex Berry<span style="font-weight:400">&rsquo;s GitHub Page</span></h1>
+        <p>Welcome to my GitHub page! I hope you find what you&rsquo;re looking for.</p>
 
-    <h2>School Projects</h2>
-    <p class="italic">Pages made for school projects</p>
-    <ul>
-        <li><a href="./ap-psych/passion-project/timing-test/index.html">Timing Test</a></li>
-    </ul>
+        <h2>School Projects</h2>
+        <p class="italic">Pages made for school projects</p>
+        <ul>
+            <li><a href="./ap-psych/passion-project/timing-test/">Timing Test</a></li>
+        </ul>
 
-    <h2>Miscellaneous</h2>
-    <p class="italic">Miscellaneous pages of varying quality</p>
-    <ul>
-        <li><a href="./misc/pi-spiral/index.html">Pi Spiral</a></li>
-        <li><a href="./misc/gamma-test/index.html">Gamma Test</a></li>
-        <li><a href="./misc/timing-test-updated/index.html">Timing Test (updated)</a></li>
-        <li><a href="./misc/inflation-simulator/index.html">Inflation Simulator</a></li>
-        <li><a href="./misc/true-education/index.html">A True Education</a></li>
-    </ul>
+        <h2>Miscellaneous</h2>
+        <p class="italic">Miscellaneous pages of varying quality</p>
+        <ul>
+            <li><a href="./misc/gamma-test/">Gamma Test</a></li>
+            <li><a href="./misc/pi-spiral/">Pi Spiral</a></li>
+            <li><a href="./misc/timing-test-updated/">Timing Test (updated)</a></li>
+            <li><a href="./misc/inflation-simulator/">Inflation Simulator</a></li>
+            <li><a href="./misc/true-education/">A True Education</a></li>
+        </ul>
 
-    <span id="footer">Created by Rex Berry · Source on <a href="https://github.com/RexBerry/RexBerry.github.io">GitHub</a></span>
-
+        <span id="footer" class="text-micro">Created by Rex Berry &middot; Source on <a href="https://github.com/RexBerry/RexBerry.github.io">GitHub</a></span>
+    </div>
 </body>
 </html>
