Move and update Moving Text page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="./misc/pi-spiral/">Pi Spiral</a></li>
             <li><a href="./misc/timing-test-updated/">Timing Test (updated)</a></li>
             <li><a href="./misc/inflation-simulator/">Inflation Simulator</a></li>
-            <li><a href="./misc/true-education/">A True Education</a></li>
+            <li><a href="./misc/moving-text/">Moving Text</a></li>
         </ul>
 
         <span id="footer" class="text-micro">Created by Rex Berry &middot; Source on <a href="https://github.com/RexBerry/RexBerry.github.io">GitHub</a></span>
