--- a/misc/moving-text/index.html
+++ b/misc/moving-text/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Rex Berry</title>
+
+  <link rel="stylesheet" href="https://use.typekit.net/kvk1ivi.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
