--- a/misc/moving-text/index.html
+++ b/misc/moving-text/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Rex Berry</title>
+  <title>Moving Text</title>
 
   <link rel="stylesheet" href="https://use.typekit.net/kvk1ivi.css">
   <link rel="stylesheet" href="/style.css">
