Add basin coding

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h2>Miscellaneous</h2>
         <p class="italic">Miscellaneous pages of varying quality</p>
         <ul>
+            <li><a href="./misc/basin-coding/">Basin Coding</a></li>
             <li><a href="./misc/gamma-test/">Gamma Test</a></li>
             <li><a href="./misc/pi-spiral/">Pi Spiral</a></li>
             <li><a href="./misc/timing-test-updated/">Timing Test (updated)</a></li>
