--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <ul>
             <li><a href="./misc/basin-coding/">Basin Coding</a></li>
             <li><a href="./misc/gamma-test/">Gamma Test</a></li>
+            <li><a href="./misc/hdr/">HDR (warning: high brightness)</a></li>
             <li><a href="./misc/pi-spiral/">Pi Spiral</a></li>
             <li><a href="./misc/timing-test-updated/">Timing Test (updated)</a></li>
             <li><a href="./misc/inflation-simulator/">Inflation Simulator</a></li>
